jquery.geocodify.css
.geocodify-dropdown {
    position: absolute;
    display:block;
    z-index: 9003;
    width: 325px;
    margin: 0 !important;
    padding: 5px 0 !important;
    background-color: white;
    border-top-color: #D9D9D9;
    border: 1px solid #ccc;
    -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
    -moz-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
    max-height: 250px;
    overflow: scroll;
}

.geocodify-dropdown ul {
    margin: 0 !important;
    padding: 0 !important;
}

.geocodify-dropdown li {
    display: block;
    padding: 5px 0 5px 8px;
    cursor: pointer;
    margin: 0;
    list-style-type: none;
    text-align: left;
    font-size: 100%;
    font-family: inherit;
}

.selected {
    color: white;
    background-color: #2262CC;
    background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
    background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
    background-image: -o-linear-gradient(top, #0088cc, #0077b3);
    background-image: linear-gradient(to bottom, #0088cc, #0077b3);
    background-repeat: repeat-x;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0)
}

